@@ -1,8 +1,5 @@
 package com.seggellion.britannia_mod.skill;
 
-import com.seggellion.britannia_mod.config.ModConfig;
-
-
 import com.google.gson.*;
 import com.mojang.logging.LogUtils;
 import net.minecraft.server.level.ServerPlayer;
@@ -10,7 +7,11 @@ import net.minecraft.server.level.ServerLevel;
 import net.minecraft.resources.ResourceLocation;
 import net.neoforged.neoforge.event.entity.player.PlayerEvent;
 import net.neoforged.neoforge.event.tick.ServerTickEvent;
-import com.seggellion.britannia_mod.util.CityAPITokenData;
+import com.seggellion.britannia_mod.server.auth.RailsRequestAuthenticator;
+import com.seggellion.britannia_mod.server.auth.ServerAuthRegistry;
+import com.seggellion.britannia_mod.server.http.BoundedHttp;
+import com.seggellion.britannia_mod.server.http.RailsApiUrlResolver.Endpoint;
+import com.seggellion.britannia_mod.server.http.ServerHttpExecutor;
 import net.minecraft.network.chat.TextColor;
 import net.minecraft.network.chat.Style;
 
@@ -24,18 +25,15 @@ import org.slf4j.Logger;
 
 import java.io.*;
 import java.net.HttpURLConnection;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 
 
 public class SkillManager {
 
     private static final Logger LOGGER = LogUtils.getLogger();
     private static final Random RNG = new Random();
-    private static final ExecutorService EXECUTOR = Executors.newCachedThreadPool();
+    private static final int MAX_RESPONSE_BYTES = 512 * 1024;
     private static final ResourceLocation FONT_UO_CLASSIC =
             ResourceLocation.fromNamespaceAndPath("britannia_mod", "uo_classic");
     private static final TextColor TEAL_0093A4 = TextColor.fromRgb(0x0093A4);
@@ -43,6 +41,18 @@ public class SkillManager {
     /** Skill definitions keyed by skill name (loaded once per server). */
 private static final Map<String, SkillDef> SKILL_DEFS = new java.util.concurrent.ConcurrentHashMap<>();
 private static final Map<UUID, PlayerSkills> PLAYER_SKILLS = new java.util.concurrent.ConcurrentHashMap<>();
+private static final Map<UUID, SkillDataState> PLAYER_SKILL_STATES = new java.util.concurrent.ConcurrentHashMap<>();
+private static final Map<UUID, Long> PLAYER_SKILL_REVISIONS = new java.util.concurrent.ConcurrentHashMap<>();
+
+public enum SkillDataState {
+    NOT_LOADED,
+    LOADING,
+    AVAILABLE,
+    UNAVAILABLE
+}
+
+public record SkillSnapshot(SkillDataState state, float value) {
+}
 
 
     /* =====  Public API  ===== */
@@ -92,7 +102,7 @@ private static final Map<UUID, PlayerSkills> PLAYER_SKILLS = new java.util.concu
     player.sendSystemMessage(Component.literal(message).withStyle(style));
 
     // Send to client on server thread
-    player.server.execute(() -> NetworkHandler.sendToPlayer(player, new SkillSyncPayload(p.map)));
+    player.server.execute(() -> sendSkillSync(player));
 
     // Async persist
     postGain(player, key, newValue);
@@ -122,7 +132,7 @@ public static float awardSkillGain(ServerPlayer player, String skillName, float 
     player.sendSystemMessage(Component.literal(""));
     player.sendSystemMessage(Component.literal(message).withStyle(style));
 
-    player.server.execute(() -> NetworkHandler.sendToPlayer(player, new SkillSyncPayload(p.map)));
+    player.server.execute(() -> sendSkillSync(player));
     postGain(player, key, newValue);
 
     return newValue - current;
@@ -140,6 +150,9 @@ private static String capitalize(String s) {
   
         NeoForge.EVENT_BUS.addListener(SkillManager::onPlayerLogin);
         NeoForge.EVENT_BUS.addListener(SkillManager::onPlayerLogOut);
+        NeoForge.EVENT_BUS.addListener(SkillManager::onPlayerRespawn);
+        NeoForge.EVENT_BUS.addListener(SkillManager::onPlayerChangedDimension);
+        NeoForge.EVENT_BUS.addListener(SkillManager::onPlayerGameModeChange);
     }
 
 // 3) Login: seed skills immediately, then fetch/merge async
@@ -150,9 +163,12 @@ private static void onPlayerLogin(PlayerEvent.PlayerLoggedInEvent e) {
     LOGGER.info("SKILL SYSTEM LOGIN (MP-safe)");
 
     // Ensure the player has a skills map right now so gains won’t be dropped in MP
-    PLAYER_SKILLS.putIfAbsent(sp.getUUID(), new PlayerSkills());
+    PLAYER_SKILLS.put(sp.getUUID(), new PlayerSkills());
+    PLAYER_SKILL_STATES.put(sp.getUUID(), SkillDataState.LOADING);
+    PLAYER_SKILL_REVISIONS.put(sp.getUUID(), 0L);
+    sendSkillSync(sp);
 
-    EXECUTOR.submit(() -> {
+    ServerHttpExecutor.run(sp.server, () -> {
         try {
             // Load defs if needed
             if (SKILL_DEFS.isEmpty()) {
@@ -164,31 +180,94 @@ private static void onPlayerLogin(PlayerEvent.PlayerLoggedInEvent e) {
                 }
             }
 
-            // Load player’s values; if API fails, keep the seeded empty map
+            // Load the authoritative values; an API failure leaves cultivation unavailable.
             PlayerSkills loaded = fetchPlayerSkillsAsync(sp);
-            if (loaded == null) return;
+            if (loaded == null) {
+                sp.server.execute(() -> markSkillDataUnavailable(sp));
+                return;
+            }
 
             sp.server.execute(() -> {
-                if (!sp.isAlive() || sp.connection == null) return;
+                if (!isCurrentConnectedPlayer(sp)) return;
                 PLAYER_SKILLS.put(sp.getUUID(), loaded);
-                NetworkHandler.sendToPlayer(sp, new SkillSyncPayload(loaded.map));
+                PLAYER_SKILL_STATES.put(sp.getUUID(), SkillDataState.AVAILABLE);
+                sendSkillSync(sp);
                 LOGGER.info("✅ Loaded {} skills for {}", loaded.size(), sp.getScoreboardName());
             });
 
         } catch (Exception ex) {
             LOGGER.error("Login skill bootstrap failed for {}", sp.getScoreboardName(), ex);
+            sp.server.execute(() -> markSkillDataUnavailable(sp));
         }
     });
 }
     private static void onPlayerLogOut(PlayerEvent.PlayerLoggedOutEvent e) {
         PLAYER_SKILLS.remove(e.getEntity().getUUID());
+        PLAYER_SKILL_STATES.remove(e.getEntity().getUUID());
+        PLAYER_SKILL_REVISIONS.remove(e.getEntity().getUUID());
+    }
+
+    private static void onPlayerRespawn(PlayerEvent.PlayerRespawnEvent event) {
+        if (event.getEntity() instanceof ServerPlayer player) {
+            sendSkillSync(player);
+        }
+    }
+
+    private static void onPlayerChangedDimension(PlayerEvent.PlayerChangedDimensionEvent event) {
+        if (event.getEntity() instanceof ServerPlayer player) {
+            sendSkillSync(player);
+        }
+    }
+
+    private static void onPlayerGameModeChange(PlayerEvent.PlayerChangeGameModeEvent event) {
+        if (event.getEntity() instanceof ServerPlayer player && !event.isCanceled()) {
+            player.server.execute(() -> sendSkillSync(player));
+        }
+    }
+
+    private static boolean isCurrentConnectedPlayer(ServerPlayer player) {
+        return player.isAlive() && player.connection != null
+                && player.server.getPlayerList().getPlayer(player.getUUID()) == player;
+    }
+
+    private static void markSkillDataUnavailable(ServerPlayer player) {
+        if (isCurrentConnectedPlayer(player)) {
+            PLAYER_SKILL_STATES.put(player.getUUID(), SkillDataState.UNAVAILABLE);
+            sendSkillSync(player);
+        }
+    }
+
+    private static void sendSkillSync(ServerPlayer player) {
+        if (player == null || player.connection == null) {
+            return;
+        }
+        // Skill sync is a UI-only snapshot. Gametest mock players and other
+        // connections that negotiated no britannia channels cannot accept the
+        // payload; skip instead of letting NeoForge throw inside event handlers.
+        if (!player.connection.hasChannel(SkillSyncPayload.TYPE)) {
+            return;
+        }
+        UUID playerId = player.getUUID();
+        SkillDataState state = PLAYER_SKILL_STATES.getOrDefault(playerId, SkillDataState.NOT_LOADED);
+        PlayerSkills playerSkills = PLAYER_SKILLS.get(playerId);
+        Map<String, Float> values = state == SkillDataState.AVAILABLE && playerSkills != null
+                ? Map.copyOf(playerSkills.map)
+                : Map.of();
+        long revision = PLAYER_SKILL_REVISIONS.merge(playerId, 1L, Long::sum);
+        boolean identificationBypass = com.seggellion.britannia_mod.farming.FlowerProtectionService
+                .isAdministrator(player.isCreative(),
+                        com.seggellion.britannia_mod.farming.FlowerProtectionService
+                                .effectivePermissionLevel(player));
+        NetworkHandler.sendToPlayer(player, SkillSyncPayload.create(
+                state, revision, identificationBypass, values
+        ));
     }
 
     /* =====  HTTP helpers  ===== */
 
     private static void fetchSkillConfig(ServerPlayer sp) {
         try {
-            JsonArray arr = doGetJson(ModConfig.API_BASE_URL + "skills/config", sp).getAsJsonArray();
+            JsonArray arr = doGetJson(Endpoint.SKILL_CONFIG, Map.of(), sp).getAsJsonArray();
             for (JsonElement el : arr) {
                 JsonObject o = el.getAsJsonObject();
                 SkillDef def = new SkillDef(o);
@@ -208,22 +287,25 @@ public static void setSkillAdmin(ServerPlayer player, String skillName, float va
         // FIX 1: getUuid() -> getUUID()
         PlayerSkills p = PLAYER_SKILLS.computeIfAbsent(player.getUUID(), id -> new PlayerSkills());
         p.set(key, value);
+        PLAYER_SKILL_STATES.put(player.getUUID(), SkillDataState.AVAILABLE);
 
         LOGGER.info("🛠️ ADMIN: Set {}'s {} skill to {}", player.getGameProfile().getName(), key, value);
 
         // Sync to client (using the public 'server' field, matching NeoForge standard)
-        player.server.execute(() -> NetworkHandler.sendToPlayer(player, new SkillSyncPayload(p.map)));
+        player.server.execute(() -> sendSkillSync(player));
 
         // Async persist to the new Rails endpoint
         postSetSkill(player, key, value);
     }
 
     private static void postSetSkill(ServerPlayer sp, String skillName, float newVal) {
-        EXECUTOR.submit(() -> {
+        ServerHttpExecutor.run(sp.server, () -> {
             try {
                 // Notice this targets a new "skills/set" endpoint, not "skills/gain"
-                URL url = new URL(ModConfig.API_BASE_URL + "skills/set");
-                HttpURLConnection c = (HttpURLConnection) url.openConnection();
+                var requestUri = ServerAuthRegistry.credentials(sp.server).orElseThrow().apiUrls()
+                        .resolve(Endpoint.SKILL_SET);
+                HttpURLConnection c = (HttpURLConnection) requestUri.toURL().openConnection();
+                BoundedHttp.configure(c);
                 c.setRequestMethod("POST");
                 c.setRequestProperty("Content-Type", "application/json");
                 c.setConnectTimeout(5000);
@@ -231,32 +313,24 @@ public static void setSkillAdmin(ServerPlayer player, String skillName, float va
 
                 // FIX 2: ServerWorld / getServerWorld() -> ServerLevel / serverLevel()
                 ServerLevel world = sp.serverLevel();
-                
-                // FIX 3: ApiTokenData -> CityAPITokenData
-                CityAPITokenData data = CityAPITokenData.getOrCreate(world);
-
-                String token = data.getApiToken();
-                String shardSecret = data.getShardSecret();
-
-                if (token != null && !token.isEmpty()) c.setRequestProperty("Authorization", "Bearer " + token);
-                if (shardSecret != null && !shardSecret.isEmpty()) c.setRequestProperty("Shard-Secret", shardSecret);
-
-                c.setDoOutput(true);
 
                 JsonObject body = new JsonObject();
                 // FIX 4: getUuid() -> getUUID()
                 body.addProperty("uuid", sp.getUUID().toString());
-                body.addProperty("shard", ModConfig.SHARD_NAME);
+                body.addProperty("shard", shardName(sp));
                 body.addProperty("skill_name", skillName);
                 body.addProperty("username", sp.getGameProfile().getName());
                 body.addProperty("value", newVal);
+                byte[] bodyBytes = body.toString().getBytes(StandardCharsets.UTF_8);
+
+                if (!RailsRequestAuthenticator.apply(c, world.getServer(), bodyBytes)) throw new IllegalStateException("Server authentication unavailable");
+
+                c.setDoOutput(true);
 
                 try (OutputStream os = c.getOutputStream()) {
-                    os.write(body.toString().getBytes(StandardCharsets.UTF_8));
+                    os.write(bodyBytes);
                 }
-                try (InputStream is = c.getInputStream()) {
-                    while (is.read() != -1) { /* drain */ }
-                }
+                BoundedHttp.readUtf8(c.getInputStream(), 64 * 1024);
             } catch (Exception e) {
                 LOGGER.warn("Failed to POST admin skill set to Rails", e);
             }
@@ -266,13 +340,7 @@ public static void setSkillAdmin(ServerPlayer player, String skillName, float va
 
 private static void fetchPlayerSkills(ServerPlayer sp) {
     try {
-        String url = ModConfig.API_BASE_URL +
-                "player_skills?" +
-                "uuid=" + encode(sp.getUUID().toString()) +  
-                "&username=" + encode(sp.getScoreboardName()) +
-                "&shard=" + encode(ModConfig.SHARD_NAME);
-
-        JsonArray arr = doGetJson(url, sp).getAsJsonArray();
+        JsonArray arr = doGetJson(Endpoint.PLAYER_SKILLS, playerSkillQuery(sp), sp).getAsJsonArray();
 
         PlayerSkills ps = new PlayerSkills();
         for (JsonElement el : arr) {
@@ -280,44 +348,45 @@ private static void fetchPlayerSkills(ServerPlayer sp) {
             ps.set(o.get("skill_name").getAsString(), o.get("value").getAsFloat());
         }
         PLAYER_SKILLS.put(sp.getUUID(), ps);
-        NetworkHandler.sendToPlayer(sp, new SkillSyncPayload(ps.map));
+        PLAYER_SKILL_STATES.put(sp.getUUID(), SkillDataState.AVAILABLE);
+        sendSkillSync(sp);
         LOGGER.info("✅ Loaded {} skills for {}", ps.size(), sp.getScoreboardName());
 
     } catch (Exception ex) {
         LOGGER.error("Failed to load player skills for {}", sp.getScoreboardName(), ex);
+        PLAYER_SKILL_STATES.put(sp.getUUID(), SkillDataState.UNAVAILABLE);
     }
 }
 
 
 // 5) Harden networking (timeouts on POST too)
 private static void postGain(ServerPlayer sp, String skillName, float newVal) {
-    EXECUTOR.submit(() -> {
+    ServerHttpExecutor.run(sp.server, () -> {
         try {
-            URL url = new URL(ModConfig.API_BASE_URL + "skills/gain");
-            HttpURLConnection c = (HttpURLConnection) url.openConnection();
+            var requestUri = ServerAuthRegistry.credentials(sp.server).orElseThrow().apiUrls()
+                    .resolve(Endpoint.SKILL_GAIN);
+            HttpURLConnection c = (HttpURLConnection) requestUri.toURL().openConnection();
+            BoundedHttp.configure(c);
             c.setRequestMethod("POST");
             c.setRequestProperty("Content-Type", "application/json");
             c.setConnectTimeout(5000);
             c.setReadTimeout(5000);
 
-            CityAPITokenData data = CityAPITokenData.getOrCreate(sp.serverLevel());
-            String token = data.getApiToken();
-            if (!token.isEmpty()) c.setRequestProperty("Authorization", "Bearer " + token);
+            JsonObject body = new JsonObject();
+            body.addProperty("uuid", sp.getUUID().toString());
+            body.addProperty("shard", shardName(sp));
+            body.addProperty("skill_name", skillName);
+            body.addProperty("value", newVal);
+            byte[] bodyBytes = body.toString().getBytes(StandardCharsets.UTF_8);
+
+            if (!RailsRequestAuthenticator.apply(c, sp.server, bodyBytes)) throw new IllegalStateException("Server authentication unavailable");
 
             c.setDoOutput(true);
 
-            JsonObject body = new JsonObject();
-            body.addProperty("uuid", sp.getUUID().toString());
-            body.addProperty("shard", ModConfig.SHARD_NAME);
-            body.addProperty("skill_name", skillName);
-            body.addProperty("value", newVal);
-
             try (OutputStream os = c.getOutputStream()) {
-                os.write(body.toString().getBytes(StandardCharsets.UTF_8));
+                os.write(bodyBytes);
             }
-            try (InputStream is = c.getInputStream()) {
-                while (is.read() != -1) { /* drain */ }
-            }
+            BoundedHttp.readUtf8(c.getInputStream(), 64 * 1024);
         } catch (Exception e) {
             LOGGER.warn("Failed to POST skill gain to Rails", e);
         }
@@ -328,7 +397,7 @@ private static void postGain(ServerPlayer sp, String skillName, float newVal) {
 // 4) Async helpers: normalize keys and be tolerant
 private static Map<String, SkillDef> fetchSkillConfigAsync(ServerPlayer sp) {
     try {
-        JsonArray arr = doGetJson(ModConfig.API_BASE_URL + "skills/config", sp).getAsJsonArray();
+        JsonArray arr = doGetJson(Endpoint.SKILL_CONFIG, Map.of(), sp).getAsJsonArray();
         Map<String, SkillDef> fresh = new HashMap<>();
         for (JsonElement el : arr) {
             SkillDef def = new SkillDef(el.getAsJsonObject());
@@ -344,12 +413,7 @@ private static Map<String, SkillDef> fetchSkillConfigAsync(ServerPlayer sp) {
 
 private static PlayerSkills fetchPlayerSkillsAsync(ServerPlayer sp) {
     try {
-        String url = ModConfig.API_BASE_URL +
-            "player_skills?uuid=" + encode(sp.getUUID().toString()) +
-            "&username=" + encode(sp.getScoreboardName()) +
-            "&shard=" + encode(ModConfig.SHARD_NAME);
-
-        JsonArray arr = doGetJson(url, sp).getAsJsonArray();
+        JsonArray arr = doGetJson(Endpoint.PLAYER_SKILLS, playerSkillQuery(sp), sp).getAsJsonArray();
         PlayerSkills ps = new PlayerSkills();
         for (JsonElement el : arr) {
             JsonObject o = el.getAsJsonObject();
@@ -358,37 +422,39 @@ private static PlayerSkills fetchPlayerSkillsAsync(ServerPlayer sp) {
         }
         return ps;
     } catch (Exception ex) {
-        // Return empty so MP still gains; we’ll POST gains and next login will resync.
+        // Preserve the distinction between an authoritative zero and unavailable data.
         LOGGER.error("Failed to load player skills for {}", sp.getScoreboardName(), ex);
-        return new PlayerSkills();
+        return null;
     }
 }
 
  /* =====  Tiny JSON util  ===== */
 
 // Add timeouts so MP servers don’t hang
-private static JsonElement doGetJson(String spec, ServerPlayer sp) throws IOException {
-    HttpURLConnection c = (HttpURLConnection) new URL(spec).openConnection();
+private static JsonElement doGetJson(Endpoint endpoint, Map<String, String> query,
+                                     ServerPlayer sp) throws IOException {
+    var requestUri = ServerAuthRegistry.credentials(sp.server).orElseThrow().apiUrls()
+            .resolveQuery(endpoint, query);
+    HttpURLConnection c = (HttpURLConnection) requestUri.toURL().openConnection();
     c.setRequestProperty("Accept", "application/json");
-    c.setConnectTimeout(5000); // 5s connect timeout
-    c.setReadTimeout(5000);    // 5s read timeout
+    BoundedHttp.configure(c);
 
-    CityAPITokenData data = CityAPITokenData.getOrCreate(sp.serverLevel());
-    String token = data.getApiToken();
-    if (!token.isEmpty()) {
-        c.setRequestProperty("Authorization", "Bearer " + token);
-    }
+    if (!RailsRequestAuthenticator.apply(c, sp.server, new byte[0])) throw new IllegalStateException("Server authentication unavailable");
 
-    try (InputStream in = c.getInputStream()) {
-        return JsonParser.parseReader(new InputStreamReader(in, StandardCharsets.UTF_8));
-    }
+    String response = BoundedHttp.readUtf8(c.getInputStream(), MAX_RESPONSE_BYTES);
+    return JsonParser.parseString(response);
 }
 
-   
+private static String shardName(ServerPlayer player) {
+    return ServerAuthRegistry.credentials(player.server).orElseThrow().shardName();
+}
 
-
-    private static String encode(String s) throws UnsupportedEncodingException {
-        return java.net.URLEncoder.encode(s, StandardCharsets.UTF_8);
+private static Map<String, String> playerSkillQuery(ServerPlayer player) {
+    return Map.of(
+            "uuid", player.getUUID().toString(),
+            "username", player.getScoreboardName(),
+            "shard", shardName(player)
+    );
     }
 
     /* =====  Data classes  ===== */
@@ -412,6 +478,11 @@ private static JsonElement doGetJson(String spec, ServerPlayer sp) throws IOExce
     public static float getSkill(java.util.UUID playerUUID, String skillName) {
         PlayerSkills ps = PLAYER_SKILLS.get(playerUUID);
         return (ps == null) ? 0f : ps.get(skillName);
+    }
+
+    public static SkillSnapshot getSkillSnapshot(UUID playerUUID, String skillName) {
+        SkillDataState state = PLAYER_SKILL_STATES.getOrDefault(playerUUID, SkillDataState.NOT_LOADED);
+        return new SkillSnapshot(state, getSkill(playerUUID, skillName));
     }
 
     // 2. The helper method that accepts a Player (Fixes all your Server errors!)
